Edit Workout Functionality working